--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -360,6 +360,7 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
+    background-color: white !important;
 }
 
 .footer-contain .btn-Buy {
