--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2,12 +2,14 @@
 .card-shadow {
 
 
-    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.06) !important;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.06) !important;
+ 
 }
 .card-shadow-inactive {
 
 
     box-shadow: 0px 0px 6px 0px white;
+
 }
 
 .otp-popup {
@@ -81,6 +83,7 @@
 
 .phone-input {
     direction: ltr !important;
+    width: 100% !important;
 }
 /* End accordion Styles */
 
@@ -426,11 +429,11 @@ object-fit: cover;
   .v-otp-input__content {
     align-items: center;
     display: flex;
-    gap: 0.5rem;
+    gap: 1rem;
     height: 64px;
     padding: 0.5rem;
     justify-content: center;
-    max-width: 320px;
+    max-width: 349px;
     position: relative;
     border-radius: inherit;
     flex-direction: row-reverse !important; /* Add this line to reverse the flex items */
