--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,6 +5,13 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.06) !important;
  
 }
+
+.card-shadow-gift {
+
+
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.06) !important;
+ 
+}
 .card-shadow-inactive {
 
 
