--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -190,6 +190,9 @@
 }
 
 @media (max-width: 500px) {
+    .popup-content {
+        padding: 20px 0 !important;
+    }
     .otp-popup {
         width: 90%;
         position: fixed;
@@ -198,6 +201,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+  
         background-color: white;
         padding: 10px;
         border-radius: 8px;
@@ -439,11 +443,21 @@ object-fit: cover;
     gap: 1rem;
     height: 64px;
     padding: 0.5rem;
+    box-sizing: border-box !important;
     justify-content: center;
     max-width: 349px;
     position: relative;
     border-radius: inherit;
     flex-direction: row-reverse !important; /* Add this line to reverse the flex items */
+}
+
+.v-otp-input__field {
+
+font-size: 16px !important;
+font-weight: 700 !important;
+line-height: 19.2px !important;
+
+
 }
 
 body {
